force-app/main/default/objects/Opportunity/fields/Account_LOB__c.field-meta.xml
<CustomField>
    <fullName>Account_LOB__c</fullName>
    <formula>Text(Account.LOB__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account LOB</label>
    <type>Text</type>
</CustomField>