force-app/main/default/objects/Opportunity/fields/Account_Name_for_PS_Activity__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_for_PS_Activity__c</fullName>
    <label>Account Name for PS Activity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>