force-app/main/default/objects/Opportunity/fields/Account_Updater_Monthly_Fee__c.field-meta.xml
<CustomField>
    <fullName>Account_Updater_Monthly_Fee__c</fullName>
    <label>Account Updater Monthly Fee $</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>