force-app/main/default/objects/Opportunity/fields/ACH_Batch_Fee__c.field-meta.xml
<CustomField>
    <fullName>ACH_Batch_Fee__c</fullName>
    <label>ACH Batch Fee</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>