force-app/main/default/objects/Opportunity/fields/ACH_Return_Fee__c.field-meta.xml
<CustomField>
    <fullName>ACH_Return_Fee__c</fullName>
    <label>ACH Return Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>