force-app/main/default/objects/Opportunity/fields/Actual_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Close_Date__c</fullName>
    <inlineHelpText>Auto-set date based on &quot;closed&quot; selling stage selection - this field will then auto update Expected Book date. If order acceptance date is different than the date closed, then date can be updated to no more than 21 days &lt;&gt; close date.</inlineHelpText>
    <label>Actual Close Date</label>
    <type>Date</type>
</CustomField>