force-app/main/default/objects/Opportunity/fields/ACV_Update_check_box__c.field-meta.xml
<CustomField>
    <fullName>ACV_Update_check_box__c</fullName>
    <description>CATM</description>
    <formula>IF(  ISPICKVAL(Reporting_Geography__c ,&quot;CANADA&quot;) &amp;&amp;  CONTAINS( Business_Unit__c , &quot;IBG&quot;),TRUE,FALSE )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ACV Update check box</label>
    <type>Checkbox</type>
</CustomField>