force-app/main/default/objects/Opportunity/fields/Advocated_Solution__c.field-meta.xml
<CustomField>
    <fullName>Advocated_Solution__c</fullName>
    <label>Advocated Solution</label>
    <length>100</length>
    <type>Text</type>
</CustomField>