force-app/main/default/objects/Opportunity/fields/Amendment_Quotes_Monthly_GP__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Quotes_Monthly_GP__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>This field used to roll up sum of Amendment Monthly GP from all Amendment Quotes.</description>
    <label>Amendment Quote Monthly GP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>