force-app/main/default/objects/Opportunity/fields/Amex_Non_Qualified_Tier__c.field-meta.xml
<CustomField>
    <fullName>Amex_Non_Qualified_Tier__c</fullName>
    <label>Amex Non-Qualified Discount Rate %</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>