force-app/main/default/objects/Opportunity/fields/Amex_Pass_Through_Plus__c.field-meta.xml
<CustomField>
    <fullName>Amex_Pass_Through_Plus__c</fullName>
    <label>Amex Pass Through Plus (%)</label>
    <precision>7</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>