force-app/main/default/objects/Opportunity/fields/Amex_Settlement__c.field-meta.xml
<CustomField>
    <fullName>Amex_Settlement__c</fullName>
    <label>Amex Settlement $</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>