force-app/main/default/objects/Opportunity/fields/Annuity_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Annuity_Order_Type__c</fullName>
    <label>Recurring Revenue Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Replacement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>