force-app/main/default/objects/Opportunity/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <label>Application</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>7726 Direct</fullName>
            </value>
            <value>
                <fullName>7726 Indirect</fullName>
            </value>
            <value>
                <fullName>7731 Direct</fullName>
            </value>
            <value>
                <fullName>7731 Indirect</fullName>
            </value>
            <value>
                <fullName>7766 Direct</fullName>
            </value>
            <value>
                <fullName>7766 Indirect</fullName>
            </value>
            <value>
                <fullName>7780 Direct</fullName>
            </value>
            <value>
                <fullName>7780 Indirect</fullName>
            </value>
            <value>
                <fullName>779X Direct</fullName>
            </value>
            <value>
                <fullName>779X Indirect</fullName>
            </value>
            <value>
                <fullName>ACS</fullName>
            </value>
            <value>
                <fullName>ADS-J</fullName>
            </value>
            <value>
                <fullName>Advanced Back Office</fullName>
            </value>
            <value>
                <fullName>Advanced Store</fullName>
            </value>
            <value>
                <fullName>AIT-APTRA Interactive Teller</fullName>
            </value>
            <value>
                <fullName>AS@Retail</fullName>
            </value>
            <value>
                <fullName>ATM</fullName>
            </value>
            <value>
                <fullName>Back Office Printing</fullName>
            </value>
            <value>
                <fullName>Compris</fullName>
            </value>
            <value>
                <fullName>Convenience Connexions (Personas 78)</fullName>
            </value>
            <value>
                <fullName>Digital Check Products</fullName>
            </value>
            <value>
                <fullName>Docuview (International)</fullName>
            </value>
            <value>
                <fullName>Drive-Up ATM</fullName>
            </value>
            <value>
                <fullName>EFTPOS</fullName>
            </value>
            <value>
                <fullName>Exterior Through-the-Wall ATM</fullName>
            </value>
            <value>
                <fullName>Financial Kiosk</fullName>
            </value>
            <value>
                <fullName>ImageMark Archive</fullName>
            </value>
            <value>
                <fullName>ImageMark Capture</fullName>
            </value>
            <value>
                <fullName>ImageMark Community Bank</fullName>
            </value>
            <value>
                <fullName>ImageMark TMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>