force-app/main/default/objects/Opportunity/fields/Are_we_the_Incumbent__c.field-meta.xml
<CustomField>
    <fullName>Are_we_the_Incumbent__c</fullName>
    <label>Are we the Incumbent?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Yes, exclusive</fullName>
            </value>
            <value>
                <fullName>Yes, multi-vendor</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>