force-app/main/default/objects/Opportunity/fields/Associated_Product_Risk_Primary__c.field-meta.xml
<CustomField>
    <fullName>Associated_Product_Risk_Primary__c</fullName>
    <description>Primary product that is related to the customers concerns</description>
    <inlineHelpText>Primary product that is related to the customers concerns</inlineHelpText>
    <label>Associated Product Risk Primary</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cloud</fullName>
            </value>
            <value>
                <fullName>HW</fullName>
            </value>
            <value>
                <fullName>HWM</fullName>
            </value>
            <value>
                <fullName>PS</fullName>
            </value>
            <value>
                <fullName>SW</fullName>
            </value>
            <value>
                <fullName>SWM</fullName>
            </value>
            <value>
                <fullName>TS</fullName>
            </value>
            <value>
                <fullName>Total Solution</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>