force-app/main/default/objects/Opportunity/fields/Batch_Fee__c.field-meta.xml
<CustomField>
    <fullName>Batch_Fee__c</fullName>
    <label>Batch Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>