force-app/main/default/objects/Opportunity/fields/Book_Month__c.field-meta.xml
<CustomField>
    <fullName>Book_Month__c</fullName>
    <description>This field is used for OCR extraction. It stores data in the format &apos;yyyy Mon&apos;, It is autopopulated by trigger.</description>
    <label>Book Month</label>
    <length>9</length>
    <type>Text</type>
</CustomField>