force-app/main/default/objects/Opportunity/fields/Book_Month_Week__c.field-meta.xml
<CustomField>
    <fullName>Book_Month_Week__c</fullName>
    <label>Book Month Week</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>