force-app/main/default/objects/Opportunity/fields/Book_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Book_Quarter__c</fullName>
    <label>Book Quarter</label>
    <length>7</length>
    <type>Text</type>
</CustomField>