force-app/main/default/objects/Opportunity/fields/Book_Quarter_Week__c.field-meta.xml
<CustomField>
    <fullName>Book_Quarter_Week__c</fullName>
    <description>This field stores the week number of the quarter in the format YYYY QQ NN like 2016 Q1 10.</description>
    <label>Book Quarter Week</label>
    <length>10</length>
    <type>Text</type>
</CustomField>