force-app/main/default/objects/Opportunity/fields/Book_Year_Week__c.field-meta.xml
<CustomField>
    <fullName>Book_Year_Week__c</fullName>
    <description>This field is used in OCR Extraction process</description>
    <label>Book Year Week</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>