force-app/main/default/objects/Opportunity/fields/Branding_Partner__c.field-meta.xml
<CustomField>
    <fullName>Branding_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Branding Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>CATM_BrandingPartnerOpps</relationshipName>
    <type>Lookup</type>
</CustomField>