force-app/main/default/objects/Opportunity/fields/bypass_validation__c.field-meta.xml
<CustomField>
    <fullName>bypass_validation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>bypass validation</label>
    <type>Checkbox</type>
</CustomField>