force-app/main/default/objects/Opportunity/fields/CAM__c.field-meta.xml
<CustomField>
    <fullName>CAM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is to show which NCR channel account manager is responsible for the opportunity</description>
    <label>CAM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>