force-app/main/default/objects/Opportunity/fields/CAM_TAM_Confirm_Net_New_Customer__c.field-meta.xml
<CustomField>
    <fullName>CAM_TAM_Confirm_Net_New_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CAM/TAM Confirm Net New Customer</label>
    <type>Checkbox</type>
</CustomField>