force-app/main/default/objects/Opportunity/fields/cat_0_score__c.field-meta.xml
<CustomField>
    <fullName>cat_0_score__c</fullName>
    <formula>IF(ISPICKVAL(Use_SF_Probability__c , &apos;YES&apos;), Probability, cat_0_score_oppscore__c) * 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>