force-app/main/default/objects/Opportunity/fields/cat_0_score_oppscore__c.field-meta.xml
<CustomField>
    <fullName>cat_0_score_oppscore__c</fullName>
    <defaultValue>0</defaultValue>
    <label>cat_0_score_oppscore</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>