force-app/main/default/objects/Opportunity/fields/CATM_Record__c.field-meta.xml
<CustomField>
    <fullName>CATM_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CATM - When checked, this opportunity was created by a CATM user.</description>
    <label>Is Cardtronics Record?</label>
    <type>Checkbox</type>
</CustomField>