force-app/main/default/objects/Opportunity/fields/CATM_Sales_Stage__c.field-meta.xml
<CustomField>
    <fullName>CATM_Sales_Stage__c</fullName>
    <description>CATM</description>
    <label>CATM Sales Stage</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Contract Submitted &amp; In Negotiation</fullName>
                <default>true</default>
                <label>Contract Submitted &amp; In Negotiation</label>
            </value>
            <value>
                <fullName>Pending Contract Signature</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>