force-app/main/default/objects/Opportunity/fields/cec_bypass_validation__c.field-meta.xml
<CustomField>
    <fullName>cec_bypass_validation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>cec_bypass_validation</label>
    <type>Checkbox</type>
</CustomField>