force-app/main/default/objects/Opportunity/fields/Channel_Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Channel_Transaction_Type__c</fullName>
    <label>Channel Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lease</fullName>
            </value>
            <value>
                <fullName>POSaaS</fullName>
            </value>
            <value>
                <fullName>Traditional</fullName>
                <default>true</default>
                <label>Traditional</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>