force-app/main/default/objects/Opportunity/fields/ChannelOfficeName__c.field-meta.xml
<CustomField>
    <fullName>ChannelOfficeName__c</fullName>
    <formula>Channel_Office__r.Name</formula>
    <label>ChannelOfficeName</label>
    <type>Text</type>
</CustomField>