force-app/main/default/objects/Opportunity/fields/Chargeback_Portal_Fee__c.field-meta.xml
<CustomField>
    <fullName>Chargeback_Portal_Fee__c</fullName>
    <label>Chargeback Portal Fee</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>