force-app/main/default/objects/Opportunity/fields/CLM_Sales_Acknowledgment__c.field-meta.xml
<CustomField>
    <fullName>CLM_Sales_Acknowledgment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CLM Sales Acknowledgment</label>
    <type>Checkbox</type>
</CustomField>