force-app/main/default/objects/Opportunity/fields/ClonedFromOpportunity__c.field-meta.xml
<CustomField>
    <fullName>ClonedFromOpportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cloned From Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Cloned Opportunities</relationshipLabel>
    <relationshipName>ClonedOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>