force-app/main/default/objects/Opportunity/fields/Closed_Lost_Comments__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Comments__c</fullName>
    <label>Closed Lost Comments</label>
    <length>80</length>
    <type>Text</type>
</CustomField>