force-app/main/default/objects/Opportunity/fields/Cloud_Products__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Products__c</fullName>
    <inlineHelpText>Total of all Cloud products</inlineHelpText>
    <label>Cloud</label>
    <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Revenue_Type__c</field>
        <operation>equals</operation>
        <value>Cloud</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>