force-app/main/default/objects/Opportunity/fields/Cloud_Products_QUBY__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Products_QUBY__c</fullName>
    <label>Cloud Products</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>