force-app/main/default/objects/Opportunity/fields/Cloud_R__c.field-meta.xml
<CustomField>
    <fullName>Cloud_R__c</fullName>
    <label>Cloud-R</label>
    <summarizedField>OpportunityLineItem.Line_Total_TCV_Price__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Revenue_Type__c</field>
        <operation>equals</operation>
        <value>Cloud</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>