force-app/main/default/objects/Opportunity/fields/Commitment_Risk__c.field-meta.xml
<CustomField>
    <fullName>Commitment_Risk__c</fullName>
    <inlineHelpText>Set the color indicator to describe the level of risk associated with the forecast commitment that you have placed on this opportunity</inlineHelpText>
    <label>Commitment Risk</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
                <color>#78C953</color>
                <label>Green</label>
            </value>
            <value>
                <fullName>Yellow</fullName>
                <color>#FFFF66</color>
                <label>Yellow</label>
            </value>
            <value>
                <fullName>Red</fullName>
                <color>#FF0000</color>
                <label>Red</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>