force-app/main/default/objects/Opportunity/fields/Commitment_Risk_Score__c.field-meta.xml
<CustomField>
    <fullName>Commitment_Risk_Score__c</fullName>
    <label>Commitment Risk Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>