force-app/main/default/objects/Opportunity/fields/Competition_Status__c.field-meta.xml
<CustomField>
    <fullName>Competition_Status__c</fullName>
    <label>Competition Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ahead of competitors</fullName>
            </value>
            <value>
                <fullName>Even with competitors</fullName>
            </value>
            <value>
                <fullName>Behind competitors</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>