force-app/main/default/objects/Opportunity/fields/Consultants__c.field-meta.xml
<CustomField>
    <fullName>Consultants__c</fullName>
    <label>Consultants</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AaSys</fullName>
            </value>
            <value>
                <fullName>Ariba Advisors</fullName>
            </value>
            <value>
                <fullName>Atos</fullName>
            </value>
            <value>
                <fullName>BankSmart</fullName>
            </value>
            <value>
                <fullName>CB Advisors</fullName>
            </value>
            <value>
                <fullName>CCG Catalyst</fullName>
            </value>
            <value>
                <fullName>Cornerstone Advisors</fullName>
            </value>
            <value>
                <fullName>Crowe Consulting</fullName>
            </value>
            <value>
                <fullName>CU Engage</fullName>
            </value>
            <value>
                <fullName>CU Tech</fullName>
            </value>
            <value>
                <fullName>DaLand Solutions</fullName>
            </value>
            <value>
                <fullName>Digital Credence</fullName>
            </value>
            <value>
                <fullName>Genesys Tech Group</fullName>
            </value>
            <value>
                <fullName>ICI Consulting</fullName>
            </value>
            <value>
                <fullName>Kaufman</fullName>
            </value>
            <value>
                <fullName>LLT Consulting</fullName>
            </value>
            <value>
                <fullName>Maplestreet</fullName>
            </value>
            <value>
                <fullName>McElroy Consulting</fullName>
            </value>
            <value>
                <fullName>McKinsey</fullName>
            </value>
            <value>
                <fullName>NextStep Inc</fullName>
            </value>
            <value>
                <fullName>Paladin Financial</fullName>
            </value>
            <value>
                <fullName>Paragon Solutions</fullName>
            </value>
            <value>
                <fullName>Profit Resources</fullName>
            </value>
            <value>
                <fullName>Samaha &amp; Associates</fullName>
            </value>
            <value>
                <fullName>SRM Corp</fullName>
            </value>
            <value>
                <fullName>RSM US LLP</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>