force-app/main/default/objects/Opportunity/fields/Contacts__c.field-meta.xml
<CustomField>
    <fullName>Contacts__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>To add additional Contacts Roles to this Opportunity please go to the Contact Roles section</inlineHelpText>
    <label>Primary Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.SuspendProcessing_Contact__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <infoMessage>Search is restricted to the Account selected in the previous page</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Contacts)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>