force-app/main/default/objects/Opportunity/fields/Contract_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Expiration_Date__c</fullName>
    <inlineHelpText>Enter the expiration date for the renewal contract being replaced</inlineHelpText>
    <label>Contract Expiration Date</label>
    <type>Date</type>
</CustomField>