force-app/main/default/objects/Opportunity/fields/Contract_Term_Mths__c.field-meta.xml
<CustomField>
    <fullName>Contract_Term_Mths__c</fullName>
    <description>CATM</description>
    <inlineHelpText>Contract term entered when adding products</inlineHelpText>
    <label>Contract Term (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>