force-app/main/default/objects/Opportunity/fields/Contractual_Commit__c.field-meta.xml
<CustomField>
    <fullName>Contractual_Commit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This should only be checked when you have a signed agreement that does not have delivery schedule or dates. Formally referred to as a Financial Order - requested by Linda Sherman</description>
    <inlineHelpText>This should only be checked when you have a signed agreement that does not have delivery schedule or dates. Formally referred to as a Financial Order. Forecast category must be Commit.  The Signed Agreement should be attached to all opportunities, quotes</inlineHelpText>
    <label>Contractual Commit</label>
    <type>Checkbox</type>
</CustomField>