force-app/main/default/objects/Opportunity/fields/Converted_Opportunity_Amount__c.field-meta.xml
<CustomField>
    <fullName>Converted_Opportunity_Amount__c</fullName>
    <description>This field is User for sending data to USM and will contain Opportunity Amount Value in UDS.</description>
    <formula>IF( ISPICKVAL(CurrencyIsoCode, &quot;USD&quot;), 
(Amount) ,(Amount / Currency_Conversion_Rate__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Converted Opportunity Amount(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>