force-app/main/default/objects/Opportunity/fields/CoSelling__c.field-meta.xml
<CustomField>
    <fullName>CoSelling__c</fullName>
    <description>This field is to let Deal classification know what the end-customer, partner and NCR relationship is for this opportunity</description>
    <label>Co-Selling</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Both companies incumbent</fullName>
            </value>
            <value>
                <fullName>Both companies customer facing</fullName>
            </value>
            <value>
                <fullName>Leveraging both companies access/relationship</fullName>
            </value>
            <value>
                <fullName>Distribution – Stock Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>