force-app/main/default/objects/Opportunity/fields/CPQ__c.field-meta.xml
<CustomField>
    <fullName>CPQ__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes a CPQ Opportunity</description>
    <inlineHelpText>Denotes a CPQ Opportunity</inlineHelpText>
    <label>Is Subscription/Preferred Offer?</label>
    <type>Checkbox</type>
</CustomField>