force-app/main/default/objects/Opportunity/fields/Created_date_TEAM__c.field-meta.xml
<CustomField>
    <fullName>Created_date_TEAM__c</fullName>
    <label>Created date (TEAM)</label>
    <type>Date</type>
</CustomField>