force-app/main/default/objects/Opportunity/fields/CS_Product_Total__c.field-meta.xml
<CustomField>
    <fullName>CS_Product_Total__c</fullName>
    <description>Sum of value of CS Products</description>
    <inlineHelpText>Total of all CS Products</inlineHelpText>
    <label>CS</label>
    <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Product_Category__c</field>
        <operation>equals</operation>
        <value>CS</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>