force-app/main/default/objects/Opportunity/fields/Currency_Conversion_Rate__c.field-meta.xml
<CustomField>
    <fullName>Currency_Conversion_Rate__c</fullName>
    <description>This field will contain local currency rate in UDS.</description>
    <label>Currency Conversion Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>